--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ GOOGLE_CLIENT_SECRET=abc123
 NEXT_PUBLIC_SECRET=anything
 GITHUB_CLIENT_ID=aaa
 GITHUB_CLIENT_SECRET=bbb
+ATLASSIAN_CLIENT_ID=aaa
+ATLASSIAN_CLIENT_SECRET=bbb
